# jadx-fast

./: .dockerignore  .gitignore  ARC_REFACTORING_FINDINGS.md  CLAUDE.md  DECOMPILATION_STATUS.md  DOCKER_DEPLOYMENT.md  DOCKER_QUICKSTART.md  Dockerfile  MEMORY_ANALYSIS.md  MEMORY_DOCS_README.md  MEMORY_EXPLOSION_SUMMARY.md  MEMORY_INDEX.md  MEMORY_ISSUE_INDEX.md  MEMORY_OPTIMIZATION_SUMMARY.md  MEMORY_QUICK_REFERENCE.md  MEMORY_REFACTOR_PLAN.md  OPTIMIZATION_PLAN.md  QUALITY_ANALYSIS_REPORT.md  QUALITY_IMPROVEMENTS_2025-12-14.md  QUALITY_SUMMARY.txt  README-FAST.md  README.md  SEQUENTIAL_PROCESSING_ANALYSIS.md  SESSION_SUMMARY.md  START_HERE.md  START_HERE_MEMORY.md  TESTING.md  build.sh  docker-compose.yml  docker-deploy.sh  enhance_with_llm.rs  performance-report.md  session_summary.md  test_llm_output.py  test_llm_postproc.rs
crates/: AGENTS.md  Cargo.toml  README.md  test_dexterity.sh  test_jadx.sh
crates/.claude/agents/: dexterity-jadx-recompiler.md  dexterity-recompiler.md
crates/badboy-jadx/resources/: AndroidManifest.xml
crates/badboy-x86-jadx/resources/: AndroidManifest.xml
crates/badboy-x86/resources/: classes2.dex
crates/dexterity-cli/: Cargo.toml
crates/dexterity-cli/examples/: enhance_parallel.rs  test_buffer.rs  test_context_extraction.rs
crates/dexterity-cli/src/: args.rs  converter.rs  decompiler.rs  deobf.rs  gradle_export.rs  main.rs  zip_fallback.rs
crates/dexterity-cli/tests/: golden_tests.rs  integration_test_framework.rs  integration_tests.rs
crates/dexterity-clsp/: Cargo.toml
crates/dexterity-clsp/src/: lib.rs
crates/dexterity-codegen/: Cargo.toml
crates/dexterity-codegen/src/: access_flags.rs  body_gen.rs  class_gen.rs  comment_gen.rs  dex_info.rs  expr_gen.rs  fallback_gen.rs  lib.rs  method_gen.rs  stdlib_signatures.rs  stmt_gen.rs  type_gen.rs  utils.rs  writer.rs
crates/dexterity-deobf/: Cargo.toml
crates/dexterity-deobf/src/: alias_provider.rs  code_rename.rs  conditions.rs  consts.rs  dalvik_to_jvm.rs  detection_report.rs  file_type_detector.rs  jobf.rs  lib.rs  mapping_exporter.rs  mapping_parser.rs  name_mapper.rs  obfuscator_signatures.rs  override_method_visitor.rs  registry.rs  rename_validator.rs  signature.rs  source_file_rename.rs  string_decryption.rs  tlds.rs  type_compare.rs  user_renames.rs  visitor.rs
crates/dexterity-dex/: Cargo.toml
crates/dexterity-dex/src/: consts.rs  error.rs  header.rs  lib.rs  reader.rs
crates/dexterity-error/: Cargo.toml
crates/dexterity-error/src/: lib.rs
crates/dexterity-fingerprint/: Cargo.toml
crates/dexterity-fingerprint/examples/: detect_library.rs  fingerprint_apks.rs
crates/dexterity-fingerprint/src/: cache.rs  class.rs  lib.rs  method.rs
crates/dexterity-fingerprint/tests/: integration_test.rs
crates/dexterity-ir/: Cargo.toml
crates/dexterity-ir/src/: arena.rs  attributes.rs  builder.rs  class_hierarchy.rs  info.rs  insn_remover.rs  insn_utils.rs  instructions.rs  kotlin_metadata.rs  lib.rs  nodes.rs  regions.rs  ssa.rs  types.rs
crates/dexterity-kotlin/: Cargo.toml  build.rs
crates/dexterity-kotlin/proto/: jvm_metadata.proto  metadata.proto
crates/dexterity-kotlin/src/: extractor.rs  lib.rs  parser.rs  smap_parser.rs  smap_types.rs  tostring_parser.rs  types.rs  visitor.rs
crates/dexterity-limits/: Cargo.toml
crates/dexterity-limits/src/: codegen.rs  lib.rs  memory.rs  regions.rs  ssa.rs  type_system.rs  zip.rs
crates/dexterity-llm-postproc/: Cargo.toml
crates/dexterity-llm-postproc/src/: cache.rs  client.rs  code_commenter.rs  code_corrector.rs  config.rs  lib.rs  type_refiner.rs  variable_renamer.rs
crates/dexterity-passes/: Cargo.toml
crates/dexterity-passes/src/: add_android_constants.rs  anonymous_class_visitor.rs  apply_variable_names.rs  attach_comments.rs  attach_method_details.rs  block_exception_handler.rs  block_finisher.rs  block_split.rs  cfg.rs  check_code.rs  check_regions.rs  class_modifier.rs  clean_regions.rs  code_rename_visitor.rs  code_shrink.rs  collect_const_values.rs  collect_usage_region.rs  conditionals.rs  const_inline.rs  constructor_visitor.rs  deboxing.rs  debug_info.rs  depth_region_traversal.rs  depth_traversal.rs  dot_graph_visitor.rs  enum_visitor.rs  exc_handlers_region.rs  extract_field_init.rs  fallback_mode.rs  finally_extract.rs  finish_type_inference.rs  fix_access_modifiers.rs  fix_multi_entry_loops.rs  fix_switch_over_enum.rs  fix_types.rs  generic_types.rs  if_region_visitor.rs  init_code_vars.rs  inline_methods.rs  kotlin_intrinsics.rs  (+41 more)
crates/dexterity-passes/tests/: integration_test_framework.rs.disabled
crates/dexterity-py/: Cargo.toml  README.md  pyproject.toml  test_bindings.py
crates/dexterity-py/src/: arsc.rs  axml.rs  error.rs  lib.rs
crates/dexterity-qa/: Cargo.toml
crates/dexterity-qa/src/: analyzer.rs  lib.rs  main.rs  metrics.rs  patterns.rs  reporter.rs
crates/dexterity-resources/: Cargo.toml
crates/dexterity-resources/src/: android_res_map.rs  arsc.rs  axml.rs  constants.rs  error.rs  lib.rs  string_pool.rs
crates/dexterity-utils/: Cargo.toml
crates/dexterity-utils/src/: escape.rs  identifiers.rs  keywords.rs  lib.rs  names.rs
crates/hello-jadx/sources/: HelloWorld.java
crates/jadx-cli/: Cargo.toml
crates/jadx-cli/src/: args.rs  converter.rs  decompiler.rs  deobf.rs  gradle_export.rs  main.rs
crates/jadx-cli/tests/: golden_tests.rs
crates/jadx-codegen/: Cargo.toml
crates/jadx-codegen/src/: body_gen.rs  class_gen.rs  dex_info.rs  expr_gen.rs  lib.rs  method_gen.rs  stmt_gen.rs  type_gen.rs  writer.rs
crates/jadx-deobf/: Cargo.toml
crates/jadx-deobf/src/: conditions.rs  lib.rs  registry.rs  signature.rs  visitor.rs
crates/jadx-dex/: Cargo.toml
crates/jadx-dex/src/: lib.rs  reader.rs
crates/jadx-ir/: Cargo.toml
crates/jadx-ir/src/: arena.rs  attributes.rs  builder.rs  class_hierarchy.rs  info.rs  instructions.rs  lib.rs  nodes.rs  regions.rs  types.rs
crates/jadx-kotlin/: Cargo.toml
crates/jadx-kotlin/src/: extractor.rs  lib.rs  parser.rs  visitor.rs
crates/jadx-passes/src/: block_split.rs  cfg.rs  conditionals.rs  extract_field_init.rs  (+10 more)
(+25431 files in other folders)
