[workspace]
resolver = "2"
members = [
    "jadx-dex",
    "jadx-ir",
    "jadx-passes",
    "jadx-codegen",
    "jadx-cli",
    "jadx-resources",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/user/jadx-rust"

[workspace.dependencies]
# Binary parsing
zerocopy = { version = "0.8", features = ["derive"] }
byteorder = "1.5"
memmap2 = "0.9"

# Data structures
bumpalo = { version = "3.16", features = ["collections"] }
slotmap = "1.0"
fixedbitset = "0.5"
smallvec = { version = "1.13", features = ["union"] }
string-interner = "0.17"
indexmap = "2.7"

# Parallelism
rayon = "1.10"

# Graph algorithms
petgraph = "0.6"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# Archive handling
zip = "2.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Fast formatting
itoa = "1.0"
ryu = "1.0"

# Serialization (optional)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
pretty_assertions = "1.4"
criterion = "0.5"

# Internal crates
jadx-dex = { path = "jadx-dex" }
jadx-ir = { path = "jadx-ir" }
jadx-passes = { path = "jadx-passes" }
jadx-codegen = { path = "jadx-codegen" }
jadx-resources = { path = "jadx-resources" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
