[workspace]
resolver = "2"
members = [
    "dexterity-dex",
    "dexterity-ir",
    "dexterity-passes",
    "dexterity-codegen",
    "dexterity-cli",
    "dexterity-resources",
    "dexterity-deobf",
    "dexterity-kotlin",
    "dexterity-qa", "dexterity-llm-postproc",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/user/dexterity"

[workspace.dependencies]
# Binary parsing
zerocopy = { version = "0.8", features = ["derive"] }
byteorder = "1.5"
memmap2 = "0.9"

# Data structures
slotmap = "1.0"
fixedbitset = "0.5"
smallvec = { version = "1.13", features = ["union"] }
string-interner = "0.17"
indexmap = "2.7"
dashmap = "5.5"
parking_lot = "0.12"
rustc-hash = "2.0"

# Parallelism
rayon = "1.10"
num_cpus = "1.16"

# Graph algorithms
petgraph = "0.6"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# Archive handling
zip = "2.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Fast formatting
itoa = "1.0"
ryu = "1.0"

# Serialization (optional)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Testing
pretty_assertions = "1.4"
criterion = "0.5"

# Regex
regex = "1"
lazy_static = "1.4"

# Internal crates
dexterity-dex = { path = "dexterity-dex" }
dexterity-ir = { path = "dexterity-ir" }
dexterity-passes = { path = "dexterity-passes" }
dexterity-codegen = { path = "dexterity-codegen" }
dexterity-resources = { path = "dexterity-resources" }
dexterity-deobf = { path = "dexterity-deobf" }
dexterity-kotlin = { path = "dexterity-kotlin" }
dexterity-llm-postproc = { path = "dexterity-llm-postproc" }

# Fast release builds (default: cargo build --release)
[profile.release]
lto = "thin"           # Thin LTO - good optimization with faster builds
codegen-units = 56     # Parallel codegen for fast iteration
# panic = "abort"      # DISABLED to allow catch_unwind for SKIP limits
debug = true

# Maximum optimization for distribution (use: cargo build --profile dist)
[profile.dist]
inherits = "release"
lto = true             # Full LTO for maximum performance
codegen-units = 1      # Single unit for best optimization (slow!)

[profile.bench]
lto = true
