[package]
name = "dexterity-cli"
description = "Command-line interface for dexterity-rust - a fast Android DEX/APK decompiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "dexterity"
path = "src/main.rs"

[dependencies]
dexterity-dex.workspace = true
dexterity-ir.workspace = true
dexterity-passes.workspace = true
dexterity-codegen.workspace = true
dexterity-resources.workspace = true
dexterity-deobf.workspace = true
dexterity-kotlin.workspace = true
clap.workspace = true
indicatif.workspace = true
rayon.workspace = true
num_cpus.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true
tikv-jemallocator = "0.6"

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3.23.0"
