[package]
name = "dexterity-codegen"
description = "Java source code generator for dexterity-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dexterity-dex.workspace = true
dexterity-ir.workspace = true
dexterity-passes.workspace = true
dexterity-deobf.workspace = true
itoa.workspace = true
ryu.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
