[package]
name = "dexterity-deobf"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deobfuscation support for dexterity-rust"

[dependencies]
dexterity-ir.workspace = true
regex.workspace = true
lazy_static.workspace = true
thiserror.workspace = true
dashmap.workspace = true
