[package]
name = "dexterity-fingerprint"
description = "Library fingerprinting for APK decompilation caching"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dexterity-dex.workspace = true
thiserror.workspace = true
rustc-hash.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rayon.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
zip.workspace = true
anyhow.workspace = true
