[package]
name = "dexterity-ir"
description = "Intermediate representation types for dexterity-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slotmap.workspace = true
fixedbitset.workspace = true
smallvec.workspace = true
string-interner.workspace = true
thiserror.workspace = true

[features]
default = []
serialize = ["serde"]

[dependencies.serde]
workspace = true
optional = true

[dev-dependencies]
pretty_assertions.workspace = true
