[package]
name = "dexterity-ir"
description = "Intermediate representation types for dexterity-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slotmap.workspace = true
fixedbitset.workspace = true
smallvec.workspace = true
string-interner.workspace = true
thiserror.workspace = true

# Optional: enables lazy loading from DEX bytecode
dexterity-dex = { path = "../dexterity-dex", optional = true }

[features]
default = []
serialize = ["serde"]
# Enable lazy loading of instructions from DEX bytecode
lazy-loading = ["dexterity-dex"]

[dependencies.serde]
workspace = true
optional = true

[dev-dependencies]
pretty_assertions.workspace = true
