[package]
name = "dexterity-llm-postproc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dexterity-ir = { workspace = true }
regex = { workspace = true }
