[package]
name = "dexterity-passes"
description = "Decompilation passes for dexterity-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dexterity-dex.workspace = true
dexterity-ir.workspace = true
rayon.workspace = true
petgraph.workspace = true
smallvec.workspace = true
fixedbitset.workspace = true
thiserror.workspace = true
tracing.workspace = true
rustc-hash.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tracing-subscriber.workspace = true
