[package]
name = "dexterity-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "dexterity_py"
crate-type = ["cdylib"]

[dependencies]
# PyO3 for Python bindings
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py38"] }

# Dexterity crates
dexterity-resources = { workspace = true }
dexterity-dex = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Data structures
indexmap = { workspace = true }

# Serialization (for passing data to Python)
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
# For building metadata
pyo3-build-config = "0.22"
