[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "dexterity-py"
version = "1.0.0"
description = "Python bindings for Dexterity Android resource extraction"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [
    { name = "Dexterity Contributors" },
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]

[tool.maturin]
python-source = "python"
module-name = "dexterity_py"
bindings = "pyo3"
compatibility = "linux"
strip = true

[tool.maturin.target.x86_64-unknown-linux-gnu]
rustc-extra-args = ["-C", "target-cpu=native"]
