[package]
name = "jadx-resources"
description = "Android resource decoding (AXML, ARSC) for jadx-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
byteorder.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
