[package]
name = "dexterity-resources"
description = "Android resource decoding (AXML, ARSC) for dexterity-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
byteorder.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
