[package]
name = "jadx-cli"
description = "Command-line interface for jadx-rust decompiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "jadx-rust"
path = "src/main.rs"

[dependencies]
jadx-dex.workspace = true
jadx-ir.workspace = true
jadx-passes.workspace = true
jadx-codegen.workspace = true
jadx-resources.workspace = true
clap.workspace = true
indicatif.workspace = true
rayon.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3.23.0"
