[package]
name = "jadx-codegen"
description = "Java source code generator for jadx-rust"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
jadx-dex.workspace = true
jadx-ir.workspace = true
jadx-passes.workspace = true
jadx-deobf.workspace = true
itoa.workspace = true
ryu.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
