[package]
name = "jadx-kotlin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
jadx-ir = { workspace = true }
jadx-dex = { workspace = true }
jadx-deobf = { workspace = true }
prost = "0.14"
prost-types = "0.14"
base64 = "0.22"
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }

[build-dependencies]
prost-build = "0.14"
